# test_k8s

./: .gitlab-ci.yml  Dockerfile  README.md  alembic.ini  app.db  compose.yml  pyproject.toml  requirements.txt
k8s/: deployment.yaml  kubeconfig.yaml  migration-job.yaml
migrations/: env.py
migrations/versions/: 5037c9684ae1_initial_migration.py
src/: database.py  main.py  models.py
